resolve some warnings